--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -22,8 +22,9 @@
         android:drawablePadding="10dp"
         android:gravity="center_vertical"
         android:padding="10dp"
-        android:text="@string/search_your_meal"
-        android:textColor="@color/colorPrimaryLight"
+        android:textColorHint="@color/white"
+        android:hint="@string/search_your_meal"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="@+id/view3"
         app:layout_constraintEnd_toStartOf="@+id/search_button" />
 
