--- a/app/src/main/res/layout/item_recycler_cart.xml
+++ b/app/src/main/res/layout/item_recycler_cart.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="16dp"
@@ -23,7 +24,7 @@
         app:srcCompat="@drawable/asiafood1" />
 
     <TextView
-        android:id="@+id/titleTxt"
+        android:id="@+id/cartmealname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
@@ -35,83 +36,55 @@
         app:layout_constraintStart_toEndOf="@+id/picCart"
         app:layout_constraintTop_toTopOf="@+id/picCart" />
 
-    <ImageView
-        android:id="@+id/minusCartBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/picCart"
-        app:layout_constraintStart_toStartOf="@+id/titleTxt"
-        app:srcCompat="@drawable/ic_baseline_indeterminate_check_box_24" />
-
     <TextView
-        android:id="@+id/numberItemTxt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:id="@+id/cartmealQuanitity"
+        android:layout_width="225dp"
+        android:layout_height="25dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginBottom="12dp"
         android:text="1"
         android:textColor="@color/colorPrimaryText"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/minusCartBtn"
-        app:layout_constraintStart_toEndOf="@+id/minusCartBtn"
-        app:layout_constraintTop_toTopOf="@+id/minusCartBtn" />
-
-    <ImageView
-        android:id="@+id/plusCardBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/minusCartBtn"
-        app:layout_constraintStart_toEndOf="@+id/numberItemTxt"
-        app:layout_constraintTop_toTopOf="@+id/minusCartBtn"
-        app:srcCompat="@drawable/ic_baseline_add_box_24" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/picCart" />
 
     <TextView
-        android:id="@+id/feeEachItem"
+        android:id="@+id/mealtotalprice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:text="0"
-        android:textColor="@color/colorPrimaryText"
-        android:textSize="16sp"
-
-        app:layout_constraintBottom_toBottomOf="@+id/titleTxt"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/titleTxt" />
-
-    <TextView
-        android:id="@+id/textView19"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="4dp"
-        android:text="$"
-        android:textColor="@color/colorPrimary"
-        app:layout_constraintBottom_toBottomOf="@+id/feeEachItem"
-        app:layout_constraintEnd_toStartOf="@+id/feeEachItem"
-        app:layout_constraintTop_toTopOf="@+id/feeEachItem" />
-
-    <TextView
-        android:id="@+id/totalEachItem"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_marginBottom="13dp"
         android:text="0"
         android:textColor="@color/colorPrimaryText"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/plusCardBtn"
-        app:layout_constraintEnd_toEndOf="@+id/feeEachItem"
-        app:layout_constraintTop_toTopOf="@+id/plusCardBtn" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/textView21"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="4dp"
+        android:layout_marginEnd="8dp"
         android:text="$"
         android:textColor="@color/colorPrimary"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/totalEachItem"
-        app:layout_constraintEnd_toStartOf="@+id/totalEachItem"
-        app:layout_constraintTop_toTopOf="@+id/totalEachItem" />
+        app:layout_constraintBottom_toBottomOf="@+id/mealtotalprice"
+        app:layout_constraintEnd_toStartOf="@+id/mealtotalprice"
+        app:layout_constraintTop_toTopOf="@+id/mealtotalprice"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/cartmealprice"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:text="Price"
+        android:textStyle="bold"
+        android:textSize="18sp"
+        android:textColor="@color/colorPrimaryText"
+        app:layout_constraintStart_toEndOf="@+id/picCart"
+        app:layout_constraintTop_toBottomOf="@+id/cartmealname" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
